# qonsole

./: CMakeLists.txt  README.md
example/: Example.qml  main.cpp
include/: DebugConsole.qml  debug.hpp  qml.qrc  qonsole.qrc
include/Qonsole/: debug.hpp
src/: debug.cpp  debug_p.hpp
